Sistema de caché y persistencia de rutas alternativas:
- Agregar caché Caffeine (15 min TTL) para rutas de Google Maps
- Crear entidad RutaSeleccionada con estados (SELECCIONADA, EN_CURSO, etc.)
- Implementar 4 endpoints: rutas alternativas, seleccionar ruta, obtener por ID, historial
- Agregar tests automáticos en Postman
- Optimizar llamadas a Google Maps API con caché en memoria

--- a/microservices/ms-transporte/.gitignore
+++ b/microservices/ms-transporte/.gitignore
@@ -31,3 +31,14 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Archivos de configuración personal (NO subir) ###
+**/application-local.yml
+**/application-local.properties
+**/application-*.local.yml
+**/application-*.local.properties
+
+### Archivos .env (NO subir) ###
+.env
+.env.local
+.env.*.local
