se hizo una limpieza de codigo basura, optimizando lo minimo y necesario

--- a/microservices/ms-transporte/src/main/resources/application.yml
+++ b/microservices/ms-transporte/src/main/resources/application.yml
@@ -4,20 +4,15 @@ server:
 spring:
   application:
     name: ms-transporte
-  datasource:
-    url: jdbc:h2:mem:mstransporte
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: false
-  h2:
-    console:
-      enabled: false
-  profiles:
-    active: dev 
+
+google:
+  maps:
+    api:
+      url: https://tpi.wiremockapi.cloud
+      key: falsa-api-key-para-pruebas
 
 logging:
   level:
