--- a/microservices/ms-cliente/pom.xml
+++ b/microservices/ms-cliente/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.12</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.5.0</version>
+		<relativePath/>
 	</parent>
 	<groupId>ar.edu.utn.frc.backend.logistica</groupId>
 	<artifactId>ms-cliente</artifactId>
