--- a/microservices/ms-transporte/pom.xml
+++ b/microservices/ms-transporte/pom.xml
@@ -98,6 +98,15 @@
 			<artifactId>caffeine</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
