--- a/microservices/ms-transporte/pom.xml
+++ b/microservices/ms-transporte/pom.xml
@@ -61,6 +61,12 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+			<version>10.15.0</version>			<!-- o la más reciente -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
